--- a/README.textile
+++ b/README.textile
@@ -1,3 +1,3 @@
-This repository contains two Javascript libraries developed and maintained by "Adstream Holdings":http://adstream.com to serve as a foundation technology for its Web applications released into production from year 2011 onward. The code in this repository is available under "the Modified BSD License":wiki/License.
+This repository contains two Javascript libraries developed and maintained by "Adstream Holdings":http://adstream.com to serve as a foundation technology for its Web applications released into production from year 2011 onward. The code in this repository is available under "the Modified BSD License":adstream-js-frameworks/wiki/License.
 
-Please refer to the "Wiki pages":wiki for detailed documentation or peruse the "Booze Shack":tree/master/examples/booze example project to quickly acquaint yourself with the libraries.
+Please refer to the "Wiki pages":adstream-js-frameworks/wiki for detailed documentation or peruse the "Booze Shack":adstream-js-frameworks/tree/master/examples/booze example project to quickly acquaint yourself with the libraries.
