--- a/util/i18n/README
+++ b/util/i18n/README
@@ -2,15 +2,13 @@ collect.js is a simple script that extracts all localizable strings from a
 CHT file and prints them as a JSON object that can be edited to create a 
 correct NLS bundle for this CHT module. 
 
-Usage: node release/collect.js FileName.cht >NLSFileName.js
+Usage: (*) unpack collect.zip in place
+       node release/dojo/collect.js FileName.cht >NLSFileName.js
 
 Note that results are always directed to standard output.
 
 In order to build release/collect.js script from the source: 
 
-1. Download the trunk version of Dojo from http://svn.dojotoolkit.org
-2. Change directory to util/buildscripts of Dojo trunk
-3. Run "./build.sh --release --profile <<Path to collect.profile.js>>
-4. Copy or move release/dojo/dojo/dojo.js from Dojo trunk directory to 
-   release/collect.js in this directory.
-
+(*) Don't even try if you value your sanity :( Dojo build framework does not
+    seem capable of producing builds for Node.js in a straightforward manner.
+    I am despaired of seeing this issue resolved in my lifetime.
